# finance

./: .gitignore  ARCHITECTURE.md  Essai.txt  bokeh.html  candle.py  config.yaml  config1.yaml  genome.txt  genome10.txt  genome2.txt  genome3.txt  genome4.txt  genome5.txt  genome6.txt  genome7.txt  genome8.txt  genome9.txt  network.html  plotly-test.py  pyproject.toml  test-bokeh.py  test-panel.py  test.py  test2.py
data/: AAPL.csv  BTC-USD.csv  NKTR.csv  OXY.csv  bitcoin-daily.csv
js-src/pandas/: dataframe.js
src/: __main__.py  __typings.py  action.py  actor.py  brain.py  config.py  containers.py  dataframe.js  gene.py  genome.js  genome.py  global_vars.py  internal.py  main.py  market.py  memory_size_format.py  neuron.py  neuron_type.py  perf_context.py  population.js  population.py  rsi.py  rsi2.py  sensor.py  sensors.js  simulation.py  simulation2.py  world.py
tests/: function.py  global_vars.py  new_process_overhead.py  os.py  perf_context.py  process_shared_data.py  prompt.py  sub_process.py  type.py
