[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["Joachim Westphal <elindorath@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.4.1"
ConfigArgParse = "^1.5.3"
pandas-ta = "^0.3.14-beta.0"
dependency-injector = "^4.38.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
# networkx = "^2.7.1"
scikit-learn = "^1.0.2"
pyvis = "^0.1.9"
PyYAML = "^6.0"
TA-Lib = "^0.4.24"
pandas-stubs = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
